# exokit

./: .eslintrc.json  .gitignore  .gitmodules  .travis-old.txt  .travis.yml  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Info.plist  LICENSE.md  MLbasickey.html  MLindex.html  ORGANIZATION.md  README.md  ROADMAP.md  analytics.js  analytics.json  android.Dockerfile  app-windows.package  appdmg.json  appveyor.yml  binding.gyp  bugsnag.js  bugsnag.txt  build-android.sh  build-ml.cmd  build-ml.sh  build.bat  builddat.js  cert.pfx  codesign-macos.pfx  codesign-macos.sh  codesign.pfx  connect-ml.sh  core.js  debug-ml.sh  demo.js  (+47 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: exoit-magic-leap-bug-report.md  exokit-bug-report.md  exokit-desktop-bug-report.md
android/: CMakeLists.txt  Dockerfile  README.md  build.gradle  googlevr-CMakeLists.txt  googlevr-build.gradle  gradle.properties  local.properties  oculusmobile-build.gradle
android/app/: build.gradle  googlevr-build.gradle  oculusmobile-build.gradle
android/app/assets/: index.js
android/app/src/main/: AndroidManifest.xml  googlevr-AndroidManifest.xml  oculusmobile-AndroidManifest.xml
android/app/src/main/java/com/webmr/exokit/: ExokitWebView.java
android/app/src/main/res/values/: strings.xml
assembly/: index.ts
assets/: emojis.js  index.js
bindings/include/: bindings.h
bindings/src/: bindings.cc
buildtools/: curl.cmd
canvas/include/: Context.h  ContextAndroid.h  FloydSteinberg.h  Image.h  ImageData.h  ImageLoadingException.h  Matrix.h  Point.h  Resources.h  web_color.h  web_string.h
canvas/src/: Color.cpp  ContextAndroid.cpp  Image.cpp  ImageData.cpp  Path2D.cpp  Resource.cpp  rg_etc1.cpp  web_color.cpp  web_string.cpp
canvascontext/include/: canvas-context.h  canvas-gradient.h  canvas-pattern.h  canvas.h  image-context.h  image.h  imageBitmap-context.h  imageBitmap.h  imageData-context.h  imageData.h  path2d.h
canvascontext/src/: canvas-context.cc  canvas-gradient.cc  canvas-pattern.cc  canvas.cc  image-context.cc  image.cc  imageBitmap-context.cc  imageBitmap.cc  imageData-context.cc  imageData.cc  path2d-context.cc  path2d.cc
cpp/: android.cpp  main.cpp
docs/: magicleap.md
docs/api/: iframeAPI.md  overview.md  webAPIs.md  webxrHardwareExtensionAPIs.md
docs/apis/: experimentalWebAPIs.md  iframeAPI.md  nativeAPIs.md  nativeFutureIntegrations.md  overview.md  webAPIs.md  webxrExtensionsAPIs.md  webxrHardwareExtensionAPIs.md
docs/guides/: building-a-basic-scene.md  exportMacDMG.md  exportMagicLeapOneMPK.md  exportOculusAPK.md  exportWindowsEXE.md  hosting-and-publishing.md  my-first-exokit-app.md  realityTabsKitchenSink.md
docs/introduction/: faq.md  index.md  installation.md  useExokitEngine.md  vr-headsets-and-webvr-browsers.md
docs/legal/: privacy.md  terms.md
docs/overview/: architecture.md  benchmarks.md  exokitEngine.md  techIntegrations.md
docs/sdk/: buildFromSource.md  commonBuildErrors.md  debugging.md  exokitCommandLine.md  exokitCommandLineFlags.md  realityTabs.md  sdk.md  startDevelopment.md
dump/: dump.1  exodump.1  exodump.2  exodump.3  exodump.4  exodump.5  exodump.6
engine/v8/: v8.h
examples/: 001_helloworld.html  002_webcam.html  003_configure.html  004_canvastexture.html  004_rendertocanvas.html  004_so_tarriball.html  ScreenQuad.js  TransformControls.js  VRKeyboard.js  aframe.html  astar.js  audio.html  avatar_ml.html  avatar_ml_manifest.json  avatar_ml_sw.js  babylon.html  blank.html  bow_ml.html  bow_ml_manifest.json  bow_ml_sw.js  browser.html  camera_client.html  camera_client.js  cameramesh_client.html  cameramesh_ml.html  canvas.html  controllers_xr.html  depth_ml.html  electron.html  electron_complete.html  electron_tests.html  exobot.glb  exobot.html  exobot_manifest.json  exobot_sw.js  exokit.fbx  external_camera.html  eyetracking_ml.html  fakeDisplay.js  fakeXrDisplay.js  (+85 more)
examples/launcher/: backend.js  launcher.html  package.json
exoc/: package.json  postprocess.js  test.sh
exoc/config/: app.package  manifest.xml
exoc/include/: wasm.h
glfw/include/: glfw.h
glfw/src/: glfw.cc
gluegen/: not-supported.txt
js/: FBXLoader.js  ScreenQuad.js  fetch-manager.js  keycode.js  model.js  skin.js  sprite3d.js  tar.js  three-ik.js  vr-display.js  xrid.js  xrmp-three.js  xrmp.js
launcher/: App.css  App.js  backend.js  index.html  launcher.html  package.json  renderer.js
launcher-old/: App.js
launcher/public/: index.html
launcher/server/: package.json  server.js
launcher/src/: App.css  App.js
launcherNew/public/: electron.js  index.html
launcherNew/src/: App.js
lib/: three-min.js  three.js  worker-native-bindings.js
magicleap/include/: magicleap.h
magicleap/src/: magicleap.cc
metadata/: Info.plist  app-device.package  appdmg-codesign.json  appdmg.json  appveyor.yml  codesign-macos.pfx  codesign-windows.pfx  exokit.iss  exokitMagicLeap.d.ts  fonts.xml  icon.icns  manifest-device.xml  program-device.mabu
nanosvg/src/: nanosvg.cpp
native_app_glue/: android_native_app_glue.c
public/: index.html
public/js/: ScreenQuad.js  keycode.js  three.js
scripts/: build-android.sh  build-googlevr-android.sh  build-ml.sh  build-oculusmobile-android.sh  debug-android.sh  debug-ml.sh  exokit-bin.sh  exokit-codesign-macos.sh  exokit-dev.cmd  exokit-install.sh  exokit-xvfb.sh  exokit.cmd  exokit.sh  gen-assets-h.js  gen-dlibs-h.js  install-android.sh  install-ml.sh  prebuild-android.sh  preinstall.js  rebuild-ml.sh  run-android.sh  run-ml.sh  testRun.sh  upload-ml.sh  urlcheck.js  version-ml.sh
scripts/android/: build-android.sh
src/: .DOM.js.swm  DOM.js  DevTools.js  Document.js  Event.js  File.js  GlobalContext.js  History.js  Location.js  MutationObserver.js  Navigator.js  Network.js  USKeyboardLayout.js  VR.js  Window.js  WindowBase.js  WindowVm.js  Worker.js  XR.js  bindings.js  bugsnag.js  constants.js  core.js  electron-child.js  electron-preload.js  electron-vm.js  electron.js  electronWorker.js  fetch.js  index.js  native-bindings.js  request.js  symbols.js  urls.js  utils.js
(+150 files in other folders)
